fix white space under moon image on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -508,12 +508,7 @@ header .carousel-indicators li {
 		margin-bottom: 60px;
 	}
 
-	header{
-		background-position-y: 0px;
-		background-size: 335%;
-	}
-
-	.social{
+	header, .social{
 		background-position-y: 0px;
 		background-size: 200%;
 	}
@@ -545,6 +540,10 @@ header .carousel-indicators li {
 }
 
 @media (max-width:480px){
+
+	header{
+		background-size: 335%;
+	}
 
 	header .carousel-iphone, .detail .app-screenshot{
 		width: 280px;
